--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "element-desktop",
-  "productName": "Element",
+  "name": "kb-chat-desktop",
+  "productName": "KB-Chat",
   "main": "lib/electron-main.js",
   "version": "1.11.4",
-  "description": "A feature-rich client for Matrix.org",
-  "author": "Element",
+  "description": "A feature-rich Chat Client",
+  "author": "Karich Design",
   "repository": {
     "type": "git",
-    "url": "https://github.com/vector-im/element-desktop"
+    "url": "https://github.com/scheissegalo/kb-desktop"
   },
   "license": "Apache-2.0",
   "files": [],
@@ -102,7 +102,7 @@
     "@types/node": "16.11.38"
   },
   "build": {
-    "appId": "im.riot.app",
+    "appId": "kb.chat.app",
     "asarUnpack": "**/*.node",
     "files": [
       "package.json",
