--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "type": "git",
     "url": "https://github.com/scheissegalo/kb-desktop"
   },
+  "keywords": [
+    "Electron",
+    "kbchat",
+    "chat",
+    "klabausterbeere",
+    "kb-chat"
+  ],
   "license": "Apache-2.0",
   "files": [],
   "scripts": {
@@ -38,7 +45,8 @@
     "debrepo": "scripts/mkrepo.sh",
     "clean": "rimraf webapp.asar dist packages deploys lib",
     "hak": "ts-node scripts/hak/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "snap": "electron-builder --linux snap"
   },
   "dependencies": {
     "auto-launch": "^5.0.5",
