Changed to fit N-App

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "name": "element-desktop",
-    "productName": "Element",
+    "name": "n-app-desktop",
+    "productName": "N-APP",
     "main": "lib/electron-main.js",
-    "version": "1.11.39",
+    "version": "1.11.41",
     "description": "A feature-rich client for Matrix.org",
-    "author": "Element",
-    "homepage": "https://element.io",
+    "author": "Karich.Design",
+    "homepage": "https://north-industries.com",
     "repository": {
         "type": "git",
-        "url": "https://github.com/vector-im/element-desktop"
+        "url": "https://github.com/scheissegalo/kb-desktop"
     },
     "license": "Apache-2.0",
     "files": [],
@@ -59,9 +59,12 @@
         "@sentry/electron": "^4.3.0",
         "auto-launch": "^5.0.5",
         "counterpart": "^0.18.6",
+        "electron-build-env": "^0.2.0",
         "electron-clear-data": "^1.0.5",
         "electron-store": "^8.0.2",
         "electron-window-state": "^5.0.3",
+        "gpg": "^0.6.0",
+        "matrix-seshat": "^3.0.1",
         "minimist": "^1.2.6",
         "node-fetch": "^2",
         "png-to-ico": "^2.1.1",
@@ -90,7 +93,7 @@
         "babel-jest": "^29.0.0",
         "chokidar": "^3.5.2",
         "detect-libc": "^1.0.3",
-        "electron": "^25.0.0",
+        "electron": "^26.0.0",
         "electron-builder": "24.6.2",
         "electron-builder-squirrel-windows": "24.6.3",
         "electron-devtools-installer": "^3.2.0",
